# CivicSignal

./: .env.example  .env.production.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  compose.production.yaml  compose.yaml  render.yaml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260716_0001_create_system_records.py  20260716_0002_verified_resource_directory.py  20260716_0003_governance_identity.py  20260716_0004_resource_governance.py  20260716_0005_reverification_tasks.py  20260718_0006_corrections_reverification.py  20260718_0007_source_ingestion.py  20260718_0008_nationwide_candidate_review.py
apps/api/src/civicsignal_api/: __init__.py  app.py  auth_dependencies.py  cli.py  geography.py  main.py  pilot_seed.py  policy.py  security.py  seed.py
apps/api/src/civicsignal_api/core/: config.py  errors.py  logging.py  middleware.py
apps/api/src/civicsignal_api/db/: dependencies.py  session.py
apps/api/src/civicsignal_api/models/: __init__.py  auth.py  governance.py  ingestion.py  resource.py  system_record.py
apps/api/src/civicsignal_api/routes/: audit.py  (+10 more)
apps/api/tests/: __init__.py  conftest.py  test_account_management.py  test_auth.py  test_corrections.py  test_governance.py  test_health.py  test_hrsa_2026.py  test_import_safety.py  test_migrations.py  test_model.py  test_outbound_safety.py  test_pilot_seed.py  test_resources.py  test_source_registry.py  test_staging_config.py  test_stale_detection.py
(+165 files in other folders)
