[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "civicsignal-api"
version = "0.1.0"
description = "CivicSignal API foundation"
requires-python = ">=3.12,<3.14"
dependencies = [
  "alembic==1.16.4",
  "argon2-cffi==25.1.0",
  "asyncpg==0.31.0",
  "fastapi==0.139.2",
  "httpx==0.28.1",
  "starlette==1.3.1",
  "pydantic-settings==2.10.1",
  "python-json-logger==3.3.0",
  "sqlalchemy[asyncio]==2.0.41",
  "uvicorn[standard]==0.35.0",
]

[project.optional-dependencies]
dev = [
  "aiosqlite==0.21.0",
  "mypy==1.17.0",
  "pytest==9.0.3",
  "pytest-asyncio==1.4.0",
  "ruff==0.12.5",
]

[project.scripts]
civicsignal = "civicsignal_api.cli:main"
civicsignal-seed = "civicsignal_api.seed:main"

[tool.hatch.build.targets.wheel]
packages = ["src/civicsignal_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["civicsignal_api"]

[[tool.mypy.overrides]]
module = "pythonjsonlogger.*"
ignore_missing_imports = true
